--- a/README
+++ b/README
@@ -12,7 +12,7 @@ other created users -
 username - user1
 password -123
 
-Heroku link - ekwindersimpleapp.herokuapp.com/api/movie/
+Heroku link - ekwinderlocaloye.herokuapp.com/
 
 Various API Links-
 / - question list based on id
